Lower KamiCommon to Java 8 so 1.8.x servers can load it
KamiPlugin lives in spigot-utils, and every consuming plugin extends it, so that
module decides whether 1.8.x support is real. Keeping it above Java 8 would have
left the whole floor exercise delivering nothing. All five modules now emit
class-file major 52.

## What it cost

Sealed hierarchies. Java 8 has no spelling for them, so Patch, IBuilder,
MenuSize, AbstractMenu, AbstractMenuBuilder and MenuIconModifier lose
compiler-enforced closed sets and carry @ApiStatus.NonExtendable instead. That is
not a breaking change for consumers, since it relaxes a restriction and existing
code still compiles, but the guarantee moves from the compiler to documentation
and IDE inspection. Every switch converted off a sealed type now ends in a
default that throws, so a new subtype fails loudly at first use rather than
falling through.

The standing cost is larger than the edits: no records, no var, no
switch expressions, no List.of and no Stream.toList in these five modules from
now on.

## What changed

47 instanceof patterns, one record, one switch expression, two pattern-matching
switches over types, 29 arrow switches, two var declarations, the
@Deprecated(since=) elements, and the Java 9+ collection and String calls.
Jdk8.repeat and Jdk8.strip stand in for the String methods added in Java 11;
strip uses Character.isWhitespace rather than trim, which cuts a different set.

Phase 0 counted 35 classes needing a source edit, from a constant-pool sweep.
That count was low, and the reason is worth keeping: switch expressions,
instanceof patterns, var, records and sealed types leave no marker class behind.
They compile to ordinary bytecode, so no amount of constant-pool analysis finds
them. Only the compiler does.

Negated patterns needed care rather than a regex. `if (!(x instanceof T v))
return` binds v for the code after the block, so the rewrite hoists the tested
expression, keeps the guard, and declares the binding below it.